.provarCaches/00D5f000005vwGkEAI/objects/rstkf__arwhttxn__c.object
<CustomObject>
    <description>arwhttxn__c</description>
    <fields>
        <fullName>rstkf__arwhttxn_adjarinvtxn__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>arwhttxn_adjarinvtxn__c</description>
        <inlineHelpText>When a WHT adjustment is made, the DR / CR Memo transaction associated with the adjusment is displayed</inlineHelpText>
        <label>Associated CR / DR Memo for Adjustment</label>
        <referenceTo>rstkf__arinvtxn__c</referenceTo>
        <relationshipLabel>Receivable WHT Transactions (Associated CR/DR Memo for Adjustment)</relationshipLabel>
        <relationshipName>arwhttxns1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__arwhttxn_adjustment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>arwhttxn_adjustment__c</description>
        <inlineHelpText>When checked indicates that the transaction was a WHT adjustment transaction</inlineHelpText>
        <label>This is an Adjustment Transaction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__arwhttxn_amtwht__c</fullName>
        <description>arwhttxn_amtwht__c</description>
        <inlineHelpText>The WHT amount reported for the transaction</inlineHelpText>
        <label>WHT Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arwhttxn_apwht__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>arwhttxn_apwht__c</description>
        <inlineHelpText>The WHT certificate number (per the WHT certificate received) associated with this transaction. This is entered by the user</inlineHelpText>
        <label>WHT Class</label>
        <referenceTo>rstkf__apwht__c</referenceTo>
        <relationshipLabel>Receivable WHT Transactions</relationshipLabel>
        <relationshipName>arwhttxns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__arwhttxn_arinvtxn__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>arwhttxn_arinvtxn__c</description>
        <inlineHelpText>The Receivable Transaction record associated with this transaction</inlineHelpText>
        <label>Receivable Transaction</label>
        <referenceTo>rstkf__arinvtxn__c</referenceTo>
        <relationshipLabel>Receivable WHT Transactions</relationshipLabel>
        <relationshipName>arwhttxns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__arwhttxn_certificate__c</fullName>
        <description>arwhttxn_certificate__c</description>
        <inlineHelpText>The WHT certificate number (per the WHT certificate received) associated with this transaction. This is entered by the user</inlineHelpText>
        <label>WHT Certificate</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__arwhttxn_claimed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>arwhttxn_claimed__c</description>
        <inlineHelpText>Checkbox to indicate if the WHT refund has been claimed from the revenue authority. This is user defined</inlineHelpText>
        <label>Refund Claimed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__arwhttxn_cmpno__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>arwhttxn_cmpno__c</description>
        <inlineHelpText>The Company associated with this transaction</inlineHelpText>
        <label>Company</label>
        <referenceTo>rstkf__glcmp__c</referenceTo>
        <relationshipLabel>Receivable WHT Transactions</relationshipLabel>
        <relationshipName>arwhttxns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__arwhttxn_invamt__c</fullName>
        <description>arwhttxn_invamt__c</description>
        <inlineHelpText>This is the total invoice amount due from the customer including the WHT amount</inlineHelpText>
        <label>Invoice Amount (includes WHT)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arwhttxn_invdate__c</fullName>
        <description>arwhttxn_invdate__c</description>
        <inlineHelpText>This is the date that the Invoice was generated</inlineHelpText>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__arwhttxn_postdate__c</fullName>
        <description>arwhttxn_postdate__c</description>
        <inlineHelpText>The posting date of the WHT transaction</inlineHelpText>
        <label>Transaction Post Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__arwhttxn_refundref__c</fullName>
        <description>arwhttxn_refundref__c</description>
        <inlineHelpText>A user defined reference to be entered when claiming the WHT refund</inlineHelpText>
        <label>Refund Reference</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__arwhttxn_socustcmpno__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>arwhttxn_socustcmpno__c</description>
        <inlineHelpText>The Customer associated with this transaction</inlineHelpText>
        <label>Customer Company</label>
        <referenceTo>rstkf__socustcmpno__c</referenceTo>
        <relationshipLabel>Receivable WHT Transactions</relationshipLabel>
        <relationshipName>arwhttxns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__arwhttxn_txnid__c</fullName>
        <description>arwhttxn_txnid__c</description>
        <displayFormat>{0}</displayFormat>
        <inlineHelpText>An auto number generated for the associated WHT transaction</inlineHelpText>
        <label>WHT Transaction ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>rstkf__arwhttxn_whtassetacct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>arwhttxn_whtassetacct__c</description>
        <inlineHelpText>The WHT asset GL account that is associated with this transaction</inlineHelpText>
        <label>WHT Asset Account</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>Receivable WHT Transactions</relationshipLabel>
        <relationshipName>arwhttxns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__arwhttxn_whtdate__c</fullName>
        <description>arwhttxn_whtdate__c</description>
        <inlineHelpText>The date the certificate was issued (as shown on the WHT certificate received from the Customer). User defined field</inlineHelpText>
        <label>Date Tax Withheld (user defined)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__arwhttxn_whtpct__c</fullName>
        <description>arwhttxn_whtpct__c</description>
        <inlineHelpText>The WHT percentage reported for the transaction</inlineHelpText>
        <label>WHT Percentage</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>rstkf__arwhttxn_yearclaimed__c</fullName>
        <description>arwhttxn_yearclaimed__c</description>
        <inlineHelpText>The Year claimed reported for the transaction</inlineHelpText>
        <label>Year Refund Claimed</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__formula_name__c</fullName>
        <formula>rstkf__arwhttxn_txnid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula field for Rootstock internal use</inlineHelpText>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <label>Receivable WHT Transaction</label>
    <listViews>
        <fullName>rstkf__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Receivable WHT Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>